--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 * {
   font-family: "Inter", sans-serif;
-  background-color: #e5e5e5;
+  /* background-color: #e5e5e5; */
   /* border: 1px solid; */
 }
 
@@ -24,6 +24,15 @@
 .information-box {
   width: 10px;
   height: 10px;
+}
+
+.calendar-area {
+  display: flex-start;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 100px;
+  margin-top: -100px;
 }
 
 .grey {
